--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
 
 <h1>finity</h1>
 <p>A finite amount of games.</p>
 
 </body>
-</html> 
+</html>
