--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-<h1>finity</h1>
-<p>A finite amount of games.</p>
-
+    <div className="homepage">
+        <h1>finity</h1>
+        <p>A finite amount of games.</p>
+    </div>
 </body>
 </html>
