Add memory-matching-game, add button on hompage

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <div className="homepage">
         <h1>finity</h1>
         <p>A finite amount of games.</p>
+        <a href="memory-matching-game/index.html">Memory Matching Game</a>
     </div>
 </body>
 </html>
