Change Random Emoji function, Add random emoji to cell onClick

--- a/memory-matching-game/index.html
+++ b/memory-matching-game/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" href="styles.css">
     <title>finity</title>
+    
 </head>
 <body>
     <div className="container">
@@ -11,30 +12,31 @@
         <div className="game-div">
             <table>
                 <tr>
-                    <td id="cell-1">🍌</td>
-                    <td id="cell-2">🍇</td>
-                    <td id="cell-3">🍎</td>
-                    <td id="cell-4">🥭</td>
+                    <td id="cell1"></td>
+                    <td id="cell2"></td>
+                    <td id="cell3"></td>
+                    <td id="cell4"></td>
                 </tr>
                 <tr>
-                    <td id="cell-5">🍉</td>
-                    <td id="cell-6">🍈</td>
-                    <td id="cell-7">🍊</td>
-                    <td id="cell-8">🍐</td>
+                    <td id="cell5"></td>
+                    <td id="cell6"></td>
+                    <td id="cell7"></td>
+                    <td id="cell8"></td>
                 </tr>
                 <tr>
-                    <td id="cell-9">🍌</td>
-                    <td id="cell-10">🍇</td>
-                    <td id="cell-11">🍎</td>
-                    <td id="cell-12">🥭</td>
+                    <td id="cell9"></td>
+                    <td id="cell10"></td>
+                    <td id="cell11"></td>
+                    <td id="cell12"></td>
                 </tr>
                 <tr>
-                    <td id="cell-13">🍉</td>
-                    <td id="cell-14">🍈</td>
-                    <td id="cell-15">🍊</td>
-                    <td id="cell-16">🍐</td>
+                    <td id="cell13"></td>
+                    <td id="cell14"></td>
+                    <td id="cell15"></td>
+                    <td id="cell16"></td>
                 </tr>
             </table>
+            <script src="script.js"></script>
         </div>
       </div>
 </body>
