--- a/memory-matching-game/index.html
+++ b/memory-matching-game/index.html
@@ -10,30 +10,30 @@
         <h1 className="title">Memory Matching Game</h1>
         <a href="/index.html">go back</a>
         <div className="game-div">
-            <table>
+            <table id="game-table">
                 <tr>
-                    <td id="cell1"></td>
-                    <td id="cell2"></td>
-                    <td id="cell3"></td>
-                    <td id="cell4"></td>
+                    <td id="0"></td>
+                    <td id="1"></td>
+                    <td id="2"></td>
+                    <td id="3"></td>
                 </tr>
                 <tr>
-                    <td id="cell5"></td>
-                    <td id="cell6"></td>
-                    <td id="cell7"></td>
-                    <td id="cell8"></td>
+                    <td id="4"></td>
+                    <td id="5"></td>
+                    <td id="6"></td>
+                    <td id="7"></td>
                 </tr>
                 <tr>
-                    <td id="cell9"></td>
-                    <td id="cell10"></td>
-                    <td id="cell11"></td>
-                    <td id="cell12"></td>
+                    <td id="8"></td>
+                    <td id="9"></td>
+                    <td id="10"></td>
+                    <td id="11"></td>
                 </tr>
                 <tr>
-                    <td id="cell13"></td>
-                    <td id="cell14"></td>
-                    <td id="cell15"></td>
-                    <td id="cell16"></td>
+                    <td id="12"></td>
+                    <td id="13"></td>
+                    <td id="14"></td>
+                    <td id="15"></td>
                 </tr>
             </table>
             <script src="script.js"></script>
