--- a/memory-matching-game/index.html
+++ b/memory-matching-game/index.html
@@ -1,43 +1,53 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <link rel="stylesheet" href="styles.css" />
     <title>finity</title>
-    
-</head>
-<body>
-    <div className="container">
-        <h1 className="title">Memory Matching Game</h1>
-        <a href="/index.html">go back</a>
-        <div className="game-div">
-            <table id="game-table">
-                <tr>
-                    <td id="0"></td>
-                    <td id="1"></td>
-                    <td id="2"></td>
-                    <td id="3"></td>
-                </tr>
-                <tr>
-                    <td id="4"></td>
-                    <td id="5"></td>
-                    <td id="6"></td>
-                    <td id="7"></td>
-                </tr>
-                <tr>
-                    <td id="8"></td>
-                    <td id="9"></td>
-                    <td id="10"></td>
-                    <td id="11"></td>
-                </tr>
-                <tr>
-                    <td id="12"></td>
-                    <td id="13"></td>
-                    <td id="14"></td>
-                    <td id="15"></td>
-                </tr>
-            </table>
-            <script src="script.js"></script>
-        </div>
+  </head>
+  <body>
+    <div class="container">
+      <h1 class="title">Memory Matching Game</h1>
+      <a href="/index.html">go back</a>
+      <div class="explanation" id="explanation">
+        <h3 class="explanation-title">A Quick Explanation</h3>
+        <p class="explanation-text">The goal is to complete the game in as little tries as possible. 
+        </br>
+        You click on one of the cards in the Table. After that you click on a second one.
+        </br>
+        If both are the same emoji, you get one set. The location of the emojis stays the same.
+        </p>
+        <button class="explanation-button" id="explanation-button">Ok, thanks!</button>
       </div>
-</body>
+      <p id="timer" hidden></p>
+      <div class="game-div" id="game-div" hidden>
+        <table id="game-table">
+          <tr>
+            <td id="0"></td>
+            <td id="1"></td>
+            <td id="2"></td>
+            <td id="3"></td>
+          </tr>
+          <tr>
+            <td id="4"></td>
+            <td id="5"></td>
+            <td id="6"></td>
+            <td id="7"></td>
+          </tr>
+          <tr>
+            <td id="8"></td>
+            <td id="9"></td>
+            <td id="10"></td>
+            <td id="11"></td>
+          </tr>
+          <tr>
+            <td id="12"></td>
+            <td id="13"></td>
+            <td id="14"></td>
+            <td id="15"></td>
+          </tr>
+        </table>
+        <script src="script.js"></script>
+      </div>
+    </div>
+  </body>
 </html>
