Snake 1/2 from game

--- a/Snake/index.html
+++ b/Snake/index.html
@@ -2,18 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Snake🐍</title>
-    <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Snake🐍</title>
+    <style>
+        body{
+            margin: 0px;
+            padding: 0px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+        }
+        canvas{
+            box-shadow: black 20px 10px 50px;
+        }
+    </style>
 </head>
+
 <body>
-    <div class="wrapper">
-        <div class="game-details">
-            <span class="score">Score: 0</span>
-            <span class="high-score">High-Score: 0</span>    
-        </div>
-        <div class="play-board"></div>
-    </div>
-    
+    <h1>Snake🐍</h1>
+
+    <canvas id="game" width="500" height="500"/>
+    <script src="script.js"></script>
 </body>
 </html>
