Add link to snake

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <p>A finite amount of games.</p>
         <a href="/tic-tac-toe/index.html">tic-tac-toe</a>
         <a href="memory-matching-game/index.html">Memory Matching Game</a>
+        <a href="Snake/index.html">Snake</a>
     </div>
 </body>
 </html>
