--- a/index.html
+++ b/index.html
@@ -15,5 +15,12 @@
         <a href="memory-matching-game/index.html">Memory Matching Game</a>
         <a href="Snake/index.html">Snake</a>
     </div>
+      <Footer>
+      <p>
+        Authors: 
+        <a href="https://github.com/Ellodev">Ellodev,</a><a href="https://github.com/plantwebserver"> plantwebserver,</a><a href="https://github.com/UkApolloxy"> UkApolloxy</a>
+         - Open Source on <a href="https://github.com/Ellodev/finity">Github</a>
+      </p>
+    </Footer>
 </body>
 </html>
