--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <a href="/index.html">go back</a>
+  <a href="/index.html" class="back-to-home">&lt;- go back</a>
   <h1 class="title">Tic Tac Toe</h1>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
