Centered main page div after mistake with footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>finity</title>
 </head>
 <body>
-    <div className="homepage">
+    <div class="homepage">
         <h1>finity</h1>
         <p>A finite amount of games.</p>
         <a href="/tic-tac-toe/index.html">tic-tac-toe</a>
