redesign: change color and highlighting of links, change spacing

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <div class="homepage">
         <h1>finity</h1>
         <p>A finite amount of games.</p>
-        <a href="/tic-tac-toe/index.html">tic-tac-toe</a>
-        <a href="memory-matching-game/index.html">Memory Matching Game</a>
-        <a href="Snake/index.html">Snake</a>
+        <a href="/tic-tac-toe/index.html">tic-tac-toe</a><br>
+        <a href="memory-matching-game/index.html">memory matching game</a><br>
+        <a href="Snake/index.html">snake</a>
     </div>
       <Footer>
       <p>
         Authors: 
-        <a href="https://github.com/Ellodev">Ellodev,</a><a href="https://github.com/plantwebserver"> plantwebserver,</a><a href="https://github.com/UkApolloxy"> UkApolloxy</a>
+        <a href="https://github.com/Ellodev">Ellodev</a>, <a href="https://github.com/plantwebserver">plantwebserver</a>, <a href="https://github.com/UkApolloxy">UkApolloxy</a>
          - Open Source on <a href="https://github.com/Ellodev/finity">Github</a>
       </p>
     </Footer>
