--- a/Jump-n-run/index.html
+++ b/Jump-n-run/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" onclick="jump()">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div id="game">
+        <div id="character"></div>
+        <div id="block"></div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
