added feedback form

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         Authors: 
         <a href="https://github.com/Ellodev">Ellodev</a>, <a href="https://github.com/plantwebserver">plantwebserver</a>, <a href="https://github.com/UkApolloxy">UkApolloxy</a>
          - Open Source on <a href="https://github.com/Ellodev/finity">Github</a>
+         - Give us your <a href="https://forms.gle/9ZPQfYBSMHX5EBDx6">feedback</a>
       </p>
     </Footer>
 </body>
