update tic tac toe explanation

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -25,6 +25,15 @@
   <div class="winning-message" id="winningMessage">
     <div data-winning-message-text></div>
     <button id="restartButton">Restart</button>
-  </div>
+    </div>
+      <div class="explanation" id="explanation">
+        <h3 class="explanation-title">A Quick Explanation</h3>
+        <p class="explanation-text">
+          Players take turns placing a mark in one of the cells of the grid. The goal of the game is for players to position their marks so that they make a continuous line of three cells vertically, horizontally, or diagonally. An opponent can prevent a win by blocking the completion of the opponent's line.
+        </p>
+        <button class="explanation-button" id="explanation-button">
+          Ok, thanks!
+        </button>
+      </div>
 </body>
 </html>
