--- a/Jump-n-run/index.html
+++ b/Jump-n-run/index.html
@@ -1,16 +1,11 @@
-<!DOCTYPE html>
-<html lang="en" onclick="jump()">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>finity</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div id="game">
-        <div id="character"></div>
-        <div id="block"></div>
-    </div>
-    <script src="script.js"></script>
-</body>
-</html>
+<canvas id="canv" width=800 height=800></canvas>
+
+<script src="script.js"></script>
+
+<style>
+
+    #canv {
+        background-color: lightblue;
+    }
+    
+</style>
