Finished easy ai

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -1,39 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <a href="/index.html" class="back-to-home">&lt;- go back</a>
-  <h1 class="title">Tic Tac Toe</h1>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="styles.css">
-  <script src="script.js" defer></script>
+  <link rel="stylesheet" href="/styles.css">
   <title>finity</title>
 </head>
 <body>
-  <div class="board" id="board">
-    <div class="cell" data-cell></div>
-    <div class="cell" data-cell></div>
-    <div class="cell" data-cell></div>
-    <div class="cell" data-cell></div>
-    <div class="cell" data-cell></div>
-    <div class="cell" data-cell></div>
-    <div class="cell" data-cell></div>
-    <div class="cell" data-cell></div>
-    <div class="cell" data-cell></div>
-  </div>
-  <div class="winning-message" id="winningMessage">
-    <div data-winning-message-text></div>
-    <button id="restartButton">Restart</button>
-    </div>
-      <div class="explanation" id="explanation">
-        <h3 class="explanation-title">A Quick Explanation</h3>
-        <p class="explanation-text">
-          Players take turns placing a mark in one of the cells of the grid. The goal of the game is for players to position their marks so that they make a continuous line of three cells vertically, horizontally, or diagonally. An opponent can prevent a win by blocking the completion of the opponent's line.
-        </p>
-        <button class="explanation-button" id="explanation-button">
-          Ok, thanks!
-        </button>
-      </div>
+  <a href="/index.html" class="back-to-home">&lt;- go back</a>
+  <h1 class="title">Tic Tac Toe</h1>
+  <p>select a version of tic-tac-toe</p>
+  <a href="dual-player/index.html">2 player</a><br>
+  <a href="easy-ai/index.html">easy ai</a>
 </body>
 </html>
