Changed name to not really hard
Cause of its not that hard

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -13,6 +13,6 @@
   <p>select a version of tic-tac-toe</p>
   <a href="dual-player/index.html">2 player</a><br>
   <a href="easy-ai/index.html">easy ai</a>
-  <a href="hard-ai/index.html">hard ai</a>
+  <a href="hard-ai/index.html">hard ai, but not really hard</a>
 </body>
 </html>
