--- a/Jump-n-run/index.html
+++ b/Jump-n-run/index.html
@@ -1,11 +1,19 @@
+<h1 id="showScore"></h1>
+
 <canvas id="canv" width=800 height=800></canvas>
 
-<script src="script.js"></script>
+<script src="main.js"></script>
 
 <style>
-
+    
     #canv {
         background-color: lightblue;
+    }
+    #showScore {
+        position: absolute;
+        top: 100px;
+        left: 300px;
+        font-size: 50px;
     }
     
 </style>
