--- a/Jump-n-run/index.html
+++ b/Jump-n-run/index.html
@@ -1,18 +1,20 @@
 <h1 id="showScore"></h1>
 
 <canvas id="canv" width=800 height=800></canvas>
-
-<script src="main.js"></script>
+<a href="/index.html" class="back-to-home">&lt;- go back</a>
+<h1>Jumpy</h1>
+<script src="script.js"></script>
+<link rel="stylesheet" href="styles.css" />
 
 <style>
     
     #canv {
-        background-color: lightblue;
+        background-color: lightskyblue;
     }
     #showScore {
         position: absolute;
         top: 100px;
-        left: 300px;
+        left: 800px;
         font-size: 50px;
     }
     
