update game rules
i changed the text of the explenation bc the grammar war terrible

--- a/Snake/index.html
+++ b/Snake/index.html
@@ -11,10 +11,9 @@
     <a href="/index.html" class="back-to-home">&lt;- go back</a>
     <h1>Snake</h1>
     <div class="explanation" id="explanation">
-        <h3 class="explanation-title">A Quick Explanation</h3>
+        <h3 class="explanation-title">Game Rules</h3>
         <p class="explanation-text">
-          You are the Snake(blue) and the Apples(red). As the Snake consumes apples,  it will get longer. When the Snake collides with the boarders or itself, you will die. You Aim for the highest score/snake. You can controll your Snake with the "arrow keys" (↑,←,↓,→) or with "WASD" (W,A,S,D). 
-        </p>
+          Control the blue snake either with the cursor or WASD keys to eat as many red apples as possible. The snake will grow in length by one segment each time an apple has been eaten.  The game ends once the snake either touches the border or the snake’s head makes contact with a part of its own body.        </p>
         <button class="explanation-button" id="explanation-button">
           Ok, thanks!
         </button>
