some little changes

--- a/Jump-n-run/index.html
+++ b/Jump-n-run/index.html
@@ -2,7 +2,7 @@
 
 <canvas id="canv" width=800 height=800></canvas>
 <a href="/index.html" class="back-to-home">&lt;- go back</a>
-<h1>Jumpy</h1>
+<h1>Jumpy | Impossible Game</h1>
 <script src="script.js"></script>
 <link rel="stylesheet" href="styles.css" />
 
@@ -14,7 +14,7 @@
     #showScore {
         position: absolute;
         top: 100px;
-        left: 800px;
+        left: 560px;
         font-size: 50px;
     }
     
