--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="/tic-tac-toe/index.html">tic-tac-toe</a>
         <a href="memory-matching-game/index.html">Memory Matching Game</a>
         <a href="Snake/index.html">Snake</a>
+        <a href="Jump-n-run/">Jumpy</a>
     </div>
 </body>
 </html>
