--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="homepage">
         <h1>finity</h1>
         <p>A finite amount of games.</p>
-        <a href="Jump-n-run/">Jumpy</a>
+        <a href="Jump-n-run/">Jumpy</a></br>
         <a href="Snake/index.html">Snake</a></br>
         <a href="/tic-tac-toe/index.html">tic-tac-toe</a></br>
         <a href="memory-matching-game/index.html">Memory Matching Game</a></br>
