feat: added analytics

--- a/Jump-n-run/index.html
+++ b/Jump-n-run/index.html
@@ -1,3 +1,7 @@
+<head>
+    <script async src="https://ellostats.vercel.app/script.js" data-website-id="18de9eb6-3762-4f6d-ae49-23ec855fa7db"></script>
+</head>
+
 <h1 id="showScore"></h1>
 
 <canvas id="canv" width=800 height=800></canvas>
