--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles.css">
   <title>finity</title>
+  <script async src="https://ellostats.vercel.app/script.js" data-website-id="18de9eb6-3762-4f6d-ae49-23ec855fa7db"></script>
 </head>
 <body>
     <div class="homepage">
