--- a/memory-matching-game/index.html
+++ b/memory-matching-game/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="styles.css" />
     <title>finity</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script async src="https://ellostats.vercel.app/script.js" data-website-id="18de9eb6-3762-4f6d-ae49-23ec855fa7db"></script>
   </head>
   <body>
     <a href="/index.html" class="back-to-home">&lt;- go back</a>
