--- a/Snake/index.html
+++ b/Snake/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>finity</title>
     <link rel="stylesheet" href="styles.css">
+    <script async src="https://ellostats.vercel.app/script.js" data-website-id="18de9eb6-3762-4f6d-ae49-23ec855fa7db"></script>
 </head>
 
 <body>
